@@ -56,7 +56,9 @@ POSSIBILITY OF SUCH DAMAGE.
 #endif
 
 #if !defined _MSC_VER || _MSC_VER >= 1600
+#ifndef __STDC_LIMIT_MACROS
 #define __STDC_LIMIT_MACROS 1
+#endif
 #include <stdint.h> // for INT64_MAX
 #else
 #if !defined INT64_MAX
@@ -65,7 +67,9 @@ POSSIBILITY OF SUCH DAMAGE.
 #endif
 
 #ifndef _MSC_VER
+#ifndef __STDC_FORMAT_MACROS
 #define __STDC_FORMAT_MACROS 1
+#endif
 #include <inttypes.h> // for PRId64 et.al.
 #endif
 
@@ -74,10 +78,12 @@ POSSIBILITY OF SUCH DAMAGE.
 #if defined _MSC_VER || defined __MINGW32__
 #define PRId64 "I64d"
 #define PRIu64 "I64u"
+#define PRIx64 "I64x"
 #define PRIu32 "u"
 #else
 #define PRId64 "lld"
 #define PRIu64 "llu"
+#define PRIx64 "llx"
 #define PRIu32 "u"
 #endif
 #endif
